--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   </a>
                 </div>
                 <div class="Member_text">
-                  <h3>김지우, 27세</h3>
+                  <h3>김지우, 26세</h3>
                   <p>직업 : 무직</p>
                   <p>주소 : 광주광역시 광산구 송도로 182번길 22 102동 1310호</p>
                   <p>번호 : 010 7664 7235</p>
@@ -101,7 +101,7 @@
                   </a>
                 </div>
                 <div class="Member_text">
-                  <h3>김범영, 27세</h3>
+                  <h3>김범영, 26세</h3>
                   <p>직업 : 무직</p>
                   <p>주소 : 광주광역시 광산로 20번길 28, 101동 208호</p>
                   <p>번호 : 010 5481 9926</p>
@@ -117,7 +117,7 @@
                   </a>
                 </div>
                 <div class="Member_text">
-                  <h3>김태건, 27세</h3>
+                  <h3>김태건, 26세</h3>
                   <p>직업 : 무직</p>
                   <p>
                     주소 : 광주광역시 광산구 어등대로 647번길 43,101동 711호
@@ -132,11 +132,11 @@
                     <a
                       href="https://www.instagram.com/y1123652/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/yjs.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>양준석, 27세</h3>
+                    <h3>양준석, 26세</h3>
                     <p>직업 : 공군 중위</p>
                     <p>
                       주소 : 경기도 수원시 권선구 정조로 409 사서함 303-13
@@ -153,11 +153,11 @@
                     <a
                       href="https://www.instagram.com/dianth_using/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/lyj.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>이용중, 27세</h3>
+                    <h3>이용중, 26세</h3>
                     <p>직업 : 요리사</p>
                     <p>
                       주소 : 광주광역시 광산구 도산동 상무대로 128-16
@@ -174,11 +174,11 @@
                     <a
                       href="https://www.instagram.com/jngksk/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/jks.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>정기석, 27세</h3>
+                    <h3>정기석, 26세</h3>
                     <p>직업 : 무직</p>
                     <p>
                       주소 : 광주광역시 광산구 송도로 182번길 55 105동 311호
@@ -194,11 +194,11 @@
                     <a
                       href="https://www.instagram.com/donghoe.babe/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/jdh.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>정동회, 27세</h3>
+                    <h3>정동회, 26세</h3>
                     <p>직업 : 무직</p>
                     <p>
                       주소 : 광주광역시 광산구 송도로182번길55 대주아파트
@@ -213,11 +213,11 @@
                 <div class="Member_div">
                   <div class="Member_img_box">
                     <a href="" target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/jas.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>정안성, 27세</h3>
+                    <h3>정안성, 26세</h3>
                     <p>직업 : 회사원</p>
                     <p>주소 : 서울 영등포구 버드나루로 90 스카이리버 1409호</p>
                     <p>번호 : 010 8490 2399</p>
@@ -231,13 +231,13 @@
                     <a
                       href="https://www.instagram.com/cho_9_13/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/cps.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>조필승, 27세</h3>
+                    <h3>조필승, 26세</h3>
                     <p>직업 : 무직</p>
-                    <p>주소 : 전남 나주 송월18길17(할데스하임) 101동 1401호</p>
+                    <p>주소 : 전남 나주 송월18길17(힐데스하임) 101동 1401호</p>
                     <p>번호 : 010 7587 6011</p>
                   </div>
                 </div>
@@ -249,11 +249,11 @@
                     <a
                       href="https://www.instagram.com/c_jy__/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/.jpg" />
+                      ><img class="Member_img" src="assets/img/cjy.jpg" />
                     </a>
                   </div>
                   <div class="Member_text">
-                    <h3>최준영, 27세</h3>
+                    <h3>최준영, 26세</h3>
                     <p>직업 : 무직</p>
                     <p>주소 : 광주광역시 선운중앙로 45 103동 904호</p>
                     <p>번호 : 010 5126 5522</p>
