--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 </div>
                 <div class="Member_text">
                   <h3>김지우, 26세</h3>
-                  <p>직업 : 무직</p>
+                  <h4>직업 : 무직</h4>
+                  <p>생일 : 10월 16일</p>
                   <p>주소 : 광주광역시 광산구 송도로 182번길 22 102동 1310호</p>
                   <p>번호 : 010 7664 7235</p>
                 </div>
@@ -102,7 +103,8 @@
                 </div>
                 <div class="Member_text">
                   <h3>김범영, 26세</h3>
-                  <p>직업 : 무직</p>
+                  <h4>직업 : 무직</h4>
+                  <p>생일 : 11월 13일</p>
                   <p>주소 : 광주광역시 광산로 20번길 28, 101동 208호</p>
                   <p>번호 : 010 5481 9926</p>
                 </div>
@@ -118,7 +120,9 @@
                 </div>
                 <div class="Member_text">
                   <h3>김태건, 26세</h3>
-                  <p>직업 : 무직</p>
+                  <h4>직업 : 무직</h4>
+                  <p>생일 : 11월 30일</p>
+                  <p></p>
                   <p>
                     주소 : 광주광역시 광산구 어등대로 647번길 43,101동 711호
                   </p>
@@ -137,7 +141,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>양준석, 26세</h3>
-                    <p>직업 : 공군 중위</p>
+                    <h4>직업 : 공군 중위</h4>
+                    <p>생일 : 03월 07일</p>
                     <p>
                       주소 : 경기도 수원시 권선구 정조로 409 사서함 303-13
                       제10전투비행단 BOQ 11동 202호
@@ -158,7 +163,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>이용중, 26세</h3>
-                    <p>직업 : 요리사</p>
+                    <h4>직업 : 요리사</h4>
+                    <p>생일 : 07월 22일</p>
                     <p>
                       주소 : 광주광역시 광산구 도산동 상무대로 128-16
                       스카이드림빌 401호
@@ -179,7 +185,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>정기석, 26세</h3>
-                    <p>직업 : 무직</p>
+                    <h4>직업 : 무직</h4>
+                    <p>생일 : 04월 22일</p>
                     <p>
                       주소 : 광주광역시 광산구 송도로 182번길 55 105동 311호
                     </p>
@@ -199,7 +206,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>정동회, 26세</h3>
-                    <p>직업 : 무직</p>
+                    <h4>직업 : 무직</h4>
+                    <p>생일 : 04월 18일</p>
                     <p>
                       주소 : 광주광역시 광산구 송도로182번길55 대주아파트
                       102-708
@@ -218,7 +226,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>정안성, 26세</h3>
-                    <p>직업 : 회사원</p>
+                    <h4>직업 : 회사원</h4>
+                    <p>생일 : 08월 31일</p>
                     <p>주소 : 서울 영등포구 버드나루로 90 스카이리버 1409호</p>
                     <p>번호 : 010 8490 2399</p>
                   </div>
@@ -236,7 +245,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>조필승, 26세</h3>
-                    <p>직업 : 무직</p>
+                    <h4>직업 : 무직</h4>
+                    <p>생일 : 09월 13일</p>
                     <p>주소 : 전남 나주 송월18길17(힐데스하임) 101동 1401호</p>
                     <p>번호 : 010 7587 6011</p>
                   </div>
@@ -254,7 +264,8 @@
                   </div>
                   <div class="Member_text">
                     <h3>최준영, 26세</h3>
-                    <p>직업 : 무직</p>
+                    <h4>직업 : 무직</h4>
+                    <p>생일 : 00월 00일</p>
                     <p>주소 : 광주광역시 선운중앙로 45 103동 904호</p>
                     <p>번호 : 010 5126 5522</p>
                   </div>
