--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="menu">
           <div class="menu_grid">
             <div class="menu_img_box">
-              <img class="menu_img" src="assets/img/menu_img.jpg" />
+              <img class="menu_img" src="assets/img/menu_img.jpg" alt="도산" />
             </div>
             <nav>
               <ul class="nav_ul">
@@ -58,7 +58,11 @@
             </div>
             <div class="About_main">
               <span class="About_span">
-                <img class="About_image" src="assets/img/menu_img.jpg" />
+                <img
+                  class="About_image"
+                  src="assets/img/menu_img.jpg"
+                  alt="도산"
+                />
               </span>
               <h1 class="About_title">"도산 결우회"</h1>
               <p class="About_text">
@@ -80,7 +84,11 @@
                     href="https://www.instagram.com/jiwdoubleo/?hl=ko"
                     target="_blank"
                   >
-                    <img class="Member_img" src="assets/img/kjw.jpg" />
+                    <img
+                      class="Member_img"
+                      src="assets/img/kjw.jpg"
+                      alt="김지우"
+                    />
                   </a>
                 </div>
                 <div class="Member_text">
@@ -98,7 +106,11 @@
                     href="https://www.instagram.com/tiger__zero/?hl=ko"
                     target="_blank"
                   >
-                    <img class="Member_img" src="assets/img/kby.jpg" />
+                    <img
+                      class="Member_img"
+                      src="assets/img/kby.jpg"
+                      alt="김범영"
+                    />
                   </a>
                 </div>
                 <div class="Member_text">
@@ -115,7 +127,11 @@
                   <a
                     href="https://www.instagram.com/x_aegun/?hl=ko"
                     target="_blank"
-                    ><img class="Member_img" src="assets/img/ktg.jpg" />
+                    ><img
+                      class="Member_img"
+                      src="assets/img/ktg.jpg"
+                      alt="김태건"
+                    />
                   </a>
                 </div>
                 <div class="Member_text">
@@ -136,7 +152,11 @@
                     <a
                       href="https://www.instagram.com/y1123652/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/yjs.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/yjs.jpg"
+                        alt="양준석"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -158,7 +178,11 @@
                     <a
                       href="https://www.instagram.com/dianth_using/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/lyj.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/lyj.jpg"
+                        alt="이용중"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -180,7 +204,11 @@
                     <a
                       href="https://www.instagram.com/jngksk/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/jks.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/jks.jpg"
+                        alt="정기석"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -201,7 +229,11 @@
                     <a
                       href="https://www.instagram.com/donghoe.babe/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/jdh.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/jdh.jpg"
+                        alt="정동회"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -221,7 +253,11 @@
                 <div class="Member_div">
                   <div class="Member_img_box">
                     <a href="" target="_blank"
-                      ><img class="Member_img" src="assets/img/jas.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/jas.jpg"
+                        alt="정안성"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -240,7 +276,11 @@
                     <a
                       href="https://www.instagram.com/cho_9_13/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/cps.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/cps.jpg"
+                        alt="조필승"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
@@ -259,7 +299,11 @@
                     <a
                       href="https://www.instagram.com/c_jy__/?hl=ko"
                       target="_blank"
-                      ><img class="Member_img" src="assets/img/cjy.jpg" />
+                      ><img
+                        class="Member_img"
+                        src="assets/img/cjy.jpg"
+                        alt="최준영"
+                      />
                     </a>
                   </div>
                   <div class="Member_text">
