--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>도산 결우회</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- 구글 폰트 -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto&display=swap"
@@ -13,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
     />
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/scroll_trigger.js" async></script>
@@ -325,74 +327,117 @@
             <div class="Bylaw_subtitle">
               <h2>도산 결우회 - 회칙</h2>
               <div class="Bylaw_main">
+                <h3>제1장 총칙</h3>
                 <p>
-                  제1장 총칙 <br />&emsp;제1조(명칭) : 본회는 「도산
-                  결우회」(이하‘본회’)라 칭한다. <br />&emsp;제2조(목적) :
-                  본회의 목적은 회원 상호간에 친목을 도모하고, 서로의 신의와
-                  우의를 다지며, 제4장 제4조의 내용을 목적으로 한다.
+                  제1조(명칭) : 본회는 「도산 결우회」(이하‘본회’)라 칭한다.
                 </p>
                 <p>
-                  제2장 회원 <br />&emsp;제1조(의무) : 회원은 본회가 정한 회비를
-                  납부하며, 정기모임 및 여행, 경조사 행사에 참석해야 한다.
-                  <br />&emsp;제2조(가입) : 입회를 원하는 사람이 있을시, 회원의
-                  만장일치로 입회할 수 있다.
-                  <br />&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;(입회비
-                  기적립금액의 1인 할당액 100%만큼을 납부하여야 한다.)
-                  <br />&emsp;제3조(탈퇴) : 회원 탈퇴는 개인자유의사에 맡기며,
-                  그동안 납부한 회비는 일체 반환되지 않는다.
-                  <br />&emsp;제4조(재가입) : 회원 탈퇴 이후, 재가입 의사가 있을
-                  시, 회원의 만장일치로 재가입 할 수 있으며, 탈퇴한 동안 내지
-                  않은 회비는 모두 납입 이후 재가입한다.
+                  제2조(목적) : 본회의 목적은 회원 상호간에 친목을 도모하고,
+                  서로의 신의와 우의를 다지며, 제4장 제4조의 내용을 목적으로
+                  한다.
+                </p>
+                <h3>제2장 회원</h3>
+                <p>
+                  제1조(의무) : 회원은 본회가 정한 회비를 납부하며, 정기모임 및
+                  여행, 경조사 행사에 참석해야 한다.
                 </p>
                 <p>
-                  제3장 임원 <br />&emsp;제1조(회장) : 회장은 총무 직을
-                  겸임하며, 임기는 1년으로 한다. (연임도 가능)
-                  <br />&emsp;제2조(선출) : 회장 재선출은 매년 첫 정기모임 시
-                  회원 중 2/3 이상 동의를 얻어 선출한다.
+                  제2조(가입) : 입회를 원하는 사람이 있을시, 회원의 만장일치로
+                  입회할 수 있다.
+                </p>
+                <p class="Bylaw_text">
+                  (입회비 기적립금액의 1인 할당액 100%만큼을 납부하여야 한다.)
                 </p>
                 <p>
-                  제4장 회비 <br />&emsp;제1조(회비) : 회비는 월 10,000원으로
-                  매월 1일~10일까지 입금한다.
-                  <br />&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;(전월 선입금시
-                  통보 / 기간 중 미납시 추후 회의 예정)
-                  <br />&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;(회원 모두
-                  취직 시, 30,000원으로 회비 인상 예정) <br />&emsp;제2조(관리)
-                  : 회비는 통장을 만들어 회장(총무)이 관리한다.
-                  <br />&emsp;제3조(계좌) : 본회 계좌는 다음과 같다.
-                  <br />&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;(3333-16-0626097
-                  카카오뱅크(도산 결우회)) <br />&emsp;제4조(사용) : 회비의
-                  사용은 다음과 같은 경우에만 사용된다.
-                  <br />&emsp;&emsp;&emsp;제1항 : 본인 결혼 시 순금 5돈에
-                  해당하는 현금을 본회 이름으로 지급한다.
-                  <br />&emsp;&emsp;&emsp;제2항 : 회원의 첫째 아이 돌일 때, 순금
-                  1돈에 해당하는 패물을 지급한다. <br />&emsp;&emsp;&emsp;제3항
-                  : 회원의 결혼식 화환 <br />&emsp;&emsp;&emsp;제4항 : 부모 사망
-                  시, 양쪽 도합 순금 3돈에 해당하는 현금을 지급한다.
-                  <br />&emsp;&emsp;&emsp;제5항 : 형제 사망 시, 도합 순금 1돈에
-                  해당하는 현금을 지급한다. <br />&emsp;&emsp;&emsp;제6항 :
-                  40살까지 결혼을 하지 않을시, 제4장 제4조 제1항에 해당하는
-                  금액을 지급한다. <br />&emsp;제5조(예외) : 회비 사용이 아닌
-                  매년 생일자에게 생일자 제외 인당 1만원씩 모아서 9만원을
-                  전달한다.
+                  제3조(탈퇴) : 회원 탈퇴는 개인자유의사에 맡기며, 그동안 납부한
+                  회비는 일체 반환되지 않는다.
                 </p>
                 <p>
-                  제5장 모임 <br />&emsp;제1조(정기모임) : 반기당 1번 의결하여
-                  친목 모임을 가진다. <br />&emsp;제2조(특별모임) : 송년회나
-                  신년회(12월,1월중) 및 회원들의 경조사 날에 특별모임을 갖는다.
-                  <br />&emsp;제3조(야유회) : 여름 또는 겨울 중에 1년에 1회 이상
-                  희망하는 회원들 하에 야유회를 갖는다.
+                  제4조(재가입) : 회원 탈퇴 이후, 재가입 의사가 있을 시, 회원의
+                  만장일치로 재가입 할 수 있으며, 탈퇴한 동안 내지 않은 회비는
+                  모두 납입 이후 재가입한다.
+                </p>
+                <h3>제3장 임원</h3>
+                <p>
+                  제1조(회장) : 회장은 총무 직을 겸임하며, 임기는 1년으로 한다.
+                  (연임도 가능)
                 </p>
                 <p>
-                  제6장 부칙 <br />&emsp;제1조(효력) : 본 회칙의 효력은 시행일
-                  2020년 5월 8일부터 즉시 발생된다. <br />&emsp;제2조(개정) : 본
-                  회칙은 회원의 2/3 이상의 동의를 얻어 수정될 수 있다.
-                  <br />&emsp;제3조(논외) : 위 회칙에서 정하지 않은 사항은
-                  민주적 일반적 관례에 따른다.
+                  제2조(선출) : 회장 재선출은 매년 첫 정기모임 시 회원 중 2/3
+                  이상 동의를 얻어 선출한다.
+                </p>
+                <h3>제4장 회비</h3>
+                <p>
+                  제1조(회비) : 회비는 월 10,000원으로 매월 1일~10일까지
+                  입금한다.
+                </p>
+                <p class="Bylaw_text">
+                  (전월 선입금시 통보 / 기간 중 미납시 추후 회의 예정)
+                </p>
+                <p class="Bylaw_text">
+                  (회원 모두 취직 시, 30,000원으로 회비 인상 예정)
+                </p>
+                <p>제2조(관리) : 회비는 통장을 만들어 회장(총무)이 관리한다.</p>
+                <p>제3조(계좌) : 본회 계좌는 다음과 같다.</p>
+                <p class="Bylaw_text">
+                  (3333-16-0626097 카카오뱅크(도산 결우회))
                 </p>
                 <p>
-                  <br />* 회칙 기안자 : 김태건 <br />* 회칙 최종 수정일 : 2020년
-                  10월 8일
+                  제4조(사용) : 회비의 사용은 다음과 같은 경우에만 사용된다.
                 </p>
+                <p>
+                  제1항 : 본인 결혼 시 순금 5돈에 해당하는 현금을 본회 이름으로
+                  지급한다.
+                </p>
+                <p>
+                  제2항 : 회원의 첫째 아이 돌일 때, 순금 1돈에 해당하는 패물을
+                  지급한다.
+                </p>
+                <p>제3항 : 회원의 결혼식 화환</p>
+                <p>
+                  제4항 : 부모 사망 시, 양쪽 도합 순금 3돈에 해당하는 현금을
+                  지급한다.
+                </p>
+                <p>
+                  제5항 : 형제 사망 시, 도합 순금 1돈에 해당하는 현금을
+                  지급한다.
+                </p>
+                <p>
+                  제6항 : 40살까지 결혼을 하지 않을시, 제4장 제4조 제1항에
+                  해당하는 금액을 지급한다.
+                </p>
+                <p>
+                  제5조(예외) : 회비 사용이 아닌 매년 생일자에게 생일자 제외
+                  인당 1만원씩 모아서 9만원을 전달한다.
+                </p>
+
+                <h3>제5장 모임</h3>
+                <p>제1조(정기모임) : 반기당 1번 의결하여 친목 모임을 가진다.</p>
+                <p>
+                  제2조(특별모임) : 송년회나 신년회(12월,1월중) 및 회원들의
+                  경조사 날에 특별모임을 갖는다.
+                </p>
+                <p>
+                  제3조(야유회) : 여름 또는 겨울 중에 1년에 1회 이상 희망하는
+                  회원들 하에 야유회를 갖는다.
+                </p>
+
+                <h3>제6장 부칙</h3>
+                <p>
+                  제1조(효력) : 본 회칙의 효력은 시행일 2020년 5월 8일부터 즉시
+                  발생된다.
+                </p>
+                <p>
+                  제2조(개정) : 본 회칙은 회원의 2/3 이상의 동의를 얻어 수정될
+                  수 있다.
+                </p>
+                <p>
+                  제3조(논외) : 위 회칙에서 정하지 않은 사항은 민주적 일반적
+                  관례에 따른다.
+                </p>
+
+                <p>* 회칙 기안자 : 김태건</p>
+                <p>* 회칙 최종 수정일 : 2020년 10월 8일</p>
               </div>
             </div>
           </div>
